--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -5,5 +5,6 @@ metadata:
 deploy:
   kubectl:
     manifests:
+      - "k8s/ghost.yaml"
       - "k8s/mariadb.yaml"
   statusCheckDeadlineSeconds: 600
