--- a/k8s/ghost.yaml
+++ b/k8s/ghost.yaml
@@ -21,8 +21,12 @@ metadata:
 spec:
   tls:
     - hosts:
-        - ghost.predictivemovement.se
-      secretName: predictivemovement-se-tls
+      - ghost.predictivemovement.se
+        secretName: ghost-ghost-predictivemovement-se-tls
+      - predictivemovement.se
+        secretName: ghost-APEX-predictivemovement-se-tls
+      - www.predictivemovement.se
+        secretName: ghost-www-predictivemovement-se-tls
   rules:
     - host: ghost.predictivemovement.se
       http:
@@ -31,9 +35,30 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: ghost
+                name: predictivemovement-ghost
                 port:
                   number: 2368
+    - host: www.predictivemovement.se
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: predictivemovement-ghost
+                port:
+                  number: 2368
+    - host: predictivemovement.se
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: predictivemovement-ghost
+                port:
+                  number: 2368
+
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
