--- a/k8s/ghost.yaml
+++ b/k8s/ghost.yaml
@@ -21,8 +21,14 @@ metadata:
 spec:
   tls:
     - hosts:
-        - ghost.predictivemovement.se
-      secretName: predictivemovement-se-tls
+      - ghost.predictivemovement.se
+      secretName: ghost-ghost-predictivemovement-se-tls
+    - hosts:
+      - predictivemovement.se
+      secretName: ghost-apex-predictivemovement-se-tls
+    - hosts:
+      - www.predictivemovement.se
+      secretName: ghost-www-predictivemovement-se-tls
   rules:
     - host: ghost.predictivemovement.se
       http:
@@ -34,6 +40,27 @@ spec:
                 name: ghost
                 port:
                   number: 2368
+    - host: www.predictivemovement.se
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: ghost
+                port:
+                  number: 2368
+    - host: predictivemovement.se
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: ghost
+                port:
+                  number: 2368
+
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
