--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,10 +1,10 @@
-apiVersion: skaffold/v2alpha4
+apiVersion: skaffold/v2beta29
 kind: Config
 metadata:
   name: predictivemovement.se
 deploy:
   kubectl:
     manifests:
-      - "k8s/ghost.yaml"
-      - "k8s/mariadb.yaml"
+    - k8s/ghost.yaml
+    - k8s/mariadb.yaml
   statusCheckDeadlineSeconds: 600
